<resources>
    <string name="app_name">AppCarros</string>
    <string name="appname">AppCarros</string>
    <string name="menu">Menu</string>
    <string name="menuop1">Ver Carros Disponiveis</string>
    <string name="menuop4">Sair</string>
    <string name="btnvoltar">Voltar ao Menu</string>
    <string name="btnverpaises">Ver Paises</string>
    <string name="tituloverbandeiras">Ver Países</string>
    <string name="conversor">Converter Valores</string>
    <string name="valorConv">Unidade Inicial</string>
    <string name="valorconv">Unidade final</string>
    <string name="ConvertVal">Converter Valores</string>
</resources>